完成登录表单的验证，解决了首页加载时候的bug和左侧梯子点击的index混乱的bug

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -839,8 +839,18 @@
 
                 </div>
             </div>
+
+            <div class="shop-sort-ft">
+                <a id="show_more_btn" href="javascript:void(0)">逛更多生活品牌</a>
+            </div>
+
         </div>
     </div>
+    <!-- footer部分 -->
+    <footer id="footer" class="footer clearfix">
+        <div class="footer-inner"></div>
+        <div class="footer-ft"></div>
+    </footer>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/Swiper/4.5.1/js/swiper.min.js"></script>
     <script src="../js/libs/lazyload/jquery.lazyload.min.js"></script>
