--- a/src/html/login.html
+++ b/src/html/login.html
@@ -37,10 +37,11 @@
           <!-- 中间登录的盒子 -->
           <div class="tab-content">
             <!-- 使用二维码登录的布局 -->
-            <div style="display: none" class="qr-login-box">
+            <div class="qr-login-box login_content">
               <div class="qr-row">
                 <div class="qr-img-box">
-                  <img src="https://passport.vip.com/qrLogin/getQrImage?qrToken=10000-c2d09b26accd411a9b437c43f392736c" alt="">
+                  <img src="https://passport.vip.com/qrLogin/getQrImage?qrToken=10000-c2d09b26accd411a9b437c43f392736c"
+                    alt="">
                 </div>
 
               </div>
@@ -52,20 +53,20 @@
               </div>
             </div>
             <!-- 账户密码登录的布局 -->
-            <div class="user-login-box l-hide">
-              <form action="#" method="post">
+            <div class="user-login-box l-hide login_content">
+              <form action="#" method="post" id="form">
                 <div class="passport-form">
                   <!-- 每一个表单的盒子里面放置表单输入的信息和错误的提示信息 -->
                   <div class="form-item">
                     <div class="ui-form-item-group">
-                      <input type="text" name="username" class="u-input" id="login_name" placeholder="手机号/用户名/邮箱">
+                      <input type="text" name="username" class="u-input" id="username" placeholder="手机号/用户名/邮箱">
                       <!-- 不同状态显示的图标 -->
                       <span class="icon-account icon-form"></span>
                       <span class="icon-error iconfont icon-cuowu-"></span>
                       <span class="icon-success"></span>
                     </div>
                     <!-- 验证信息的提示盒子 -->
-                    <div class="username_error_msg error_msg"><span>用户名不存在</span></div>
+                    <div class="username_error_msg error_msg"><span>用户名不能为空</span></div>
                   </div>
                   <div class="form-item">
                     <div class="ui-form-item-group">
@@ -75,7 +76,7 @@
                       <span class="icon-success"></span>
                     </div>
                     <!-- 验证信息的提示盒子 -->
-                    <div class="password_error_msg error_msg"><span>密码错误</span></div>
+                    <div class="password_error_msg error_msg"><span>密码不能为空</span></div>
                   </div>
                   <div class="c-form-item clearfix">
                     <div class="other-item">
@@ -84,10 +85,9 @@
                     </div>
                   </div>
                   <div class="form-submit">
-                    <button class="submit-btn">登录</button>
+                    <button id="submit-btn" class="submit-btn">登录</button>
                   </div>
                 </div>
-              </div>
             </form>
 
           </div>
@@ -124,6 +124,11 @@
   <footer>
     <p class="copyright">Copyright 2008-2020 vip.com，All Rights Reserved ICP证：粤 B2-20080329</p>
   </footer>
+  <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+  <script src="../js/libs/validate/jquery.validate.min.js"></script>
+  <script src="../js/libs/validate/additional-methods.js"></script>
+  <script src="../js/libs/validate/messages_zh.js"></script>
+  <script src="../js/login.js"></script>
 </body>
 
 </html>
