--- a/src/html/login.html
+++ b/src/html/login.html
@@ -115,6 +115,7 @@
                 <a class="register" href="javascript:void(0)">免费注册</a>
               </div>
             </div>
+            </div>
           </div>
         </div>
       </div>
