完成首页搜索框点击弹出历史个推荐的功能，完成首页top按钮点击回到浏览器顶部

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -4,8 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>唯品会(首页)</title>
     <link href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <link rel="shortcut icon" href="https://api.byi.pw/favicon/?url=https://www.vip.com/" type="image/x-icon">
     <link rel="stylesheet" href="./css/commons.css">
     <link rel="stylesheet" href="./css/index.css">
     <link rel="stylesheet" href="./css/icon/iconfont.css">
@@ -30,7 +31,7 @@
             </ul>
             <div class="bottom-opr">
                 <div><span class="iconfont icon-bi"></span></div>
-                <div><span class="iconfont icon-fanhuidingbu-"></span></div>
+                <div class="location-top"><span class="iconfont icon-fanhuidingbu-"></span></div>
             </div>
         </div>
     </div>
@@ -843,7 +844,18 @@
             <div class="shop-sort-ft">
                 <a id="show_more_btn" href="javascript:void(0)">逛更多生活品牌</a>
             </div>
+            <!-- 预告 -->
+            <div class="notice-shop shop-top-banner clearfix">
+                <div class="shop-sort">
+                    <div class="shop-sort-title">
+                        <img src="https://a.vpimg4.com/upload/dop/2016/03/17/98/tomorrow.png" alt="">
+                    </div>
+                </div>
+                <!-- 商品展示的盒子 -->
+                <div class="shop-show-box clearfix">
 
+                </div>
+            </div>
         </div>
     </div>
     <!-- footer部分 -->
