--- a/src/html/login.html
+++ b/src/html/login.html
@@ -6,6 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>vip-登录</title>
   <link href="https://cdn.bootcss.com/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+  <link rel="shortcut icon" href="https://api.byi.pw/favicon/?url=https://www.vip.com/" type="image/x-icon">
   <link rel="stylesheet" href="./css/base.css">
   <link rel="stylesheet" href="./css/login.css">
   <link rel="stylesheet" href="./css/icon/iconfont.css">
