--- a/src/html/login.html
+++ b/src/html/login.html
@@ -128,10 +128,10 @@
     <p class="copyright">Copyright 2008-2020 vip.com，All Rights Reserved ICP证：粤 B2-20080329</p>
   </footer>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-  <script src="../js/libs/validate/jquery.validate.min.js"></script>
-  <script src="../js/libs/validate/additional-methods.js"></script>
-  <script src="../js/libs/validate/messages_zh.js"></script>
-  <script src="../js/login.js"></script>
+  <script src="./js/libs/validate/jquery.validate.min.js"></script>
+  <script src="./js/libs/validate/additional-methods.js"></script>
+  <script src="./js/libs/validate/messages_zh.js"></script>
+  <script src="./js/login.js"></script>
 </body>
 
 </html>
