--- a/src/html/index.html
+++ b/src/html/index.html
@@ -886,7 +886,7 @@
     </footer>
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/Swiper/4.5.1/js/swiper.min.js"></script>
-    <script src="../js/libs/lazyload/jquery.lazyload.min.js"></script>
+    <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
     <script src="./js/index.js"></script>
 </body>
 
