活动页数据渲染功能完成并且抽离了一些通用的样式和html和js函数

--- a/src/html/activity.html
+++ b/src/html/activity.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -8,16 +9,89 @@
     <link rel="shortcut icon" href="https://api.byi.pw/favicon/?url=https://www.vip.com/" type="image/x-icon">
     <link rel="stylesheet" href="./css/commons.css">
     <link rel="stylesheet" href="./css/icon/iconfont.css">
+    <link rel="stylesheet" href="./css/activity.css">
     <link rel="stylesheet" href="./css/base.css">
 </head>
+
 <body>
-       <!-- 右栏 -->
-       @@include("./component/right_bar.html") 
-       <!-- 头部 -->
-       @@include("./component/index_header.html")
-        <div class="banner" style="background: url('https://h2.appsimg.com/b.appsimg.com/upload/mst/2020/03/08/17/a19dfbcab2d2e75cb4328a251796e01e.png') center top no-repeat;"></div>
-       <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
-       <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
-       <script src="./js/header.js"></script>
+    <!-- 右栏 -->
+    @@include("./component/right_bar.html")
+    <!-- 头部 -->
+    @@include("./component/index_header.html")
+    <div class="banner"
+        style="background: url('https://h2.appsimg.com/b.appsimg.com/upload/mst/2020/03/08/17/a19dfbcab2d2e75cb4328a251796e01e.png') center top no-repeat;">
+    </div>
+    <div class="warp">
+        <div class="container layout">
+            <div class="plugin-pingou-wrap clearfix">
+                <img class="pingdup-img"
+                    src="//h2.appsimg.com/b.appsimg.com/upload/mst/2020/03/08/192/82a29711b7e810b36cc3cc5e8474c613.png"
+                    alt="">
+            </div>
+            <div style="height: auto;" class="pligin-loaded-container">
+                <div class="brand-container">
+                    <div class="brand-list clearfix">
+                        <div class="brand-inner-box">
+                            <div class="brand-inner-item">
+                                <div class="brand-img-box">
+                                    <img src="https://a.appsimg.com/upload/brand/upcb/2020/04/02/148/ias_158583882997712.jpg!75.webp"
+                                        alt="">
+                                </div>
+                                <div class="brand-info-box">
+                                    <p class="brand-name">罗莱集团-最后疯抢专场</p>
+                                    <p class="benefit-info">3折封顶</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brand-inner-box">
+                            <div class="brand-inner-item">
+                                <div class="brand-img-box">
+                                    <img src="https://a.appsimg.com/upload/brand/upcb/2020/04/02/148/ias_158583882997712.jpg!75.webp"
+                                        alt="">
+                                </div>
+                                <div class="brand-info-box">
+                                    <p class="brand-name">罗莱集团-最后疯抢专场</p>
+                                    <p class="benefit-info">3折封顶</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brand-inner-box">
+                            <div class="brand-inner-item">
+                                <div class="brand-img-box">
+                                    <img src="https://a.appsimg.com/upload/brand/upcb/2020/04/02/148/ias_158583882997712.jpg!75.webp"
+                                        alt="">
+                                </div>
+                                <div class="brand-info-box">
+                                    <p class="brand-name">罗莱集团-最后疯抢专场</p>
+                                    <p class="benefit-info">3折封顶</p>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="brand-inner-box">
+                            <div class="brand-inner-item">
+                                <div class="brand-img-box">
+                                    <img src="https://a.appsimg.com/upload/brand/upcb/2020/04/02/148/ias_158583882997712.jpg!75.webp"
+                                        alt="">
+                                </div>
+                                <div class="brand-info-box">
+                                    <p class="brand-name">罗莱集团-最后疯抢专场</p>
+                                    <p class="benefit-info">3折封顶</p>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+    </div>
+    @@include("./component/footer.html")
+
+    <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
+    <script src="./js/header.js"></script>
+    <script src="./js/activity.js"></script>
 </body>
+
 </html>
