--- a/src/html/index.html
+++ b/src/html/index.html
@@ -557,11 +557,8 @@
     <div class="index-bg-bttom layout clearfix">
         <a href="javascript:void(0)" target="_blank" role="button" class="ui-btn-large ui-btn-primary more-brand-btn">查看更多预告档期</a>
     </div>
-    <!-- footer部分 -->
-    <footer id="footer" class="footer clearfix">
-        <div class="footer-inner"></div>
-        <div class="footer-ft"></div>
-    </footer>
+
+    @@include("./component/footer.html")
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdn.bootcss.com/Swiper/4.5.1/js/swiper.min.js"></script>
     <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
