优化左侧栏鼠标移入弹出的信息框的动画效果和缩回隐藏的动画效果

--- a/src/html/index.html
+++ b/src/html/index.html
@@ -221,7 +221,7 @@
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/10/30/148/mst_a6d967b477ab749178909e31ab420fda_100x36_90.png"
                                 alt="">
                             <span
-                                style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59
+                                style="position:absolute; top: 211px; left: 90px; font-size: 16px; background: rgb(255,255,255);color: #000000;">￥59</span>
                         </div>
                         <div style="margin-left: 20px; position: relative; float: left;" class="item">
                             <img width="170" height="170"
@@ -243,14 +243,14 @@
                         </div>
                         <div style="margin-left: 20px; position: relative; float: left;" class="item">
                             <img width="170" height="170"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/2020/03/18/144/1767dda1-33da-4f63-9fa2-21baae15533a_340x340_90.jpg"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/999999999/2020/0325/83/081f6a78-7e05-4ae5-abbf-d5d0f4c6bf4d_340x340_90.jpg"
                                 alt="">
                             <img width="100" height="60" style="position: absolute; top: 141px; left: 35px;"
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/09/24/60/mst_ba99110750bad5db7c67755d35373acc_200x120_90.png"
                                 alt="">
                             <img class="img-title" width="80" style="position: absolute; top: 151px; left: 45px"
                                 height="40"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/bc4882a86231494db8f2c690173438e7/10037392/black_160x80_90.png"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/a27e3eee98ad4d659011b4df998d4ca3/10011493/black_160x80_90.png"
                                 alt="">
 
                             <img width="50" height="18" style="position: absolute; top: 211px; left: 35px;"
@@ -261,14 +261,14 @@
                         </div>
                         <div style="margin-left: 20px; position: relative; float: left;" class="item">
                             <img width="170" height="170"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/2020/03/18/144/1767dda1-33da-4f63-9fa2-21baae15533a_340x340_90.jpg"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/113652/2019/0806/111/c133d764-fc33-4fca-b514-a07078da0f88_340x340_90.jpg"
                                 alt="">
                             <img width="100" height="60" style="position: absolute; top: 141px; left: 35px;"
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/09/24/60/mst_ba99110750bad5db7c67755d35373acc_200x120_90.png"
                                 alt="">
                             <img class="img-title" width="80" style="position: absolute; top: 151px; left: 45px"
                                 height="40"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/bc4882a86231494db8f2c690173438e7/10037392/black_160x80_90.png"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/6a056fc1be064b6cb6c166ba0abbb996/10003976/black_160x80_90.png"
                                 alt="">
 
                             <img width="50" height="18" style="position: absolute; top: 211px; left: 35px;"
@@ -279,14 +279,14 @@
                         </div>
                         <div style="margin-left: 20px; position: relative; float: left;" class="item">
                             <img width="170" height="170"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/2020/03/18/144/1767dda1-33da-4f63-9fa2-21baae15533a_340x340_90.jpg"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/137604/2019/0823/103/d9097431-d1cd-4e38-975f-7dc50a47b80d_340x340_90.jpg"
                                 alt="">
                             <img width="100" height="60" style="position: absolute; top: 141px; left: 35px;"
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/09/24/60/mst_ba99110750bad5db7c67755d35373acc_200x120_90.png"
                                 alt="">
                             <img class="img-title" width="80" style="position: absolute; top: 151px; left: 45px"
                                 height="40"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/bc4882a86231494db8f2c690173438e7/10037392/black_160x80_90.png"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/46090094110147fdad7dab9200bb0d05/10020419/black_160x80_90.png"
                                 alt="">
 
                             <img width="50" height="18" style="position: absolute; top: 211px; left: 35px;"
@@ -297,14 +297,14 @@
                         </div>
                         <div style="margin-left: 20px; position: relative; float: left;" class="item">
                             <img width="170" height="170"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/2020/03/18/144/1767dda1-33da-4f63-9fa2-21baae15533a_340x340_90.jpg"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/merchandise/pdcvis/615340/2020/0402/129/c9bc71ba-592a-44c6-9d59-2ddb3c57c194_340x340_90.jpg"
                                 alt="">
                             <img width="100" height="60" style="position: absolute; top: 141px; left: 35px;"
                                 src="https://h2.appsimg.com/b.appsimg.com/upload/mst/2019/09/24/60/mst_ba99110750bad5db7c67755d35373acc_200x120_90.png"
                                 alt="">
                             <img class="img-title" width="80" style="position: absolute; top: 151px; left: 45px"
                                 height="40"
-                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/bc4882a86231494db8f2c690173438e7/10037392/black_160x80_90.png"
+                                src="https://h2.appsimg.com/a.appsimg.com/upload/brandcool/0/1aff46ec94af46758a53bba26ad5b819/10028133/black_160x80_90.png"
                                 alt="">
 
                             <img width="50" height="18" style="position: absolute; top: 211px; left: 35px;"
