--- a/src/html/detailInfo.html
+++ b/src/html/detailInfo.html
@@ -31,7 +31,8 @@
                         <div class="show-midpic active-pannel">
                             <a href="javascript:;" class="bigImgZoom">
                                 <div class="zoomPad">
-                                    <div class="zoom_origin_img_box"> <!-- <img width="420" height="420"
+                                    <div class="zoom_origin_img_box">
+                                        <!-- <img width="420" height="420"
                                             class="slide-mid-pic"
                                             src="https://a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0413/31/20c9c7d2-01ff-45a6-b80f-f700c669bd21_420x420_90.jpg"
                                             alt=""> -->
@@ -359,9 +360,10 @@
     @@include("./component/footer.html")
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
     <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
-    <script src="./js/header.js"></script>
     <script src="./js/libs/magnifier/magnifier.js"></script>
+    <script src="./js/header.js"></script>
     <script src="./js/detailInfo.js"></script>
+
 </body>
 
 </html>
