加入登录注册的接口和完成登录成功之后用户名在页面显示用户信息保存在cookie中

--- a/src/html/detailInfo.html
+++ b/src/html/detailInfo.html
@@ -355,6 +355,55 @@
             </div>
 
         </div>
+        <!-- 详情数据 -->
+        <div class="fw-detail clearfix">
+            <div class="placeholder layout clearfix">
+                <div class="detailTop clearfix">
+                    <div class="detailTop-wrap">
+                        <ul class="dt-list">
+                            <li><a href="javascript:void(0)" class="dt-list-item selected">尺码参数</a></li>
+                            <li><a href="javascript:void(0)" class="dt-list-item">商品展示</a></li>
+                            <li><a href="javascript:void(0)" class="dt-list-item">全部口碑</a></li>
+                            <li><a href="javascript:void(0)" class="dt-list-item">商品咨询</a></li>
+                            <li><a href="javascript:void(0)" class="dt-list-item">关于我们</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="detail clearfix">
+                    <div class="J-dc-tit-new dc-tit-new" id="J-proShow-scroll"><i class="dc-tit-new-icon"></i><p class="dc-title">商品展示<i class="dc-title-en">IMAGE</i></p></div>
+                    <div class="video-html">
+                        <div class="video-play" id="J_QCVideo"></div>
+                    </div>
+                    <div class="dc-img">
+                        <div class="dc-img-detail">
+                                            <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/42/823ac073-2d2b-48c4-b90c-f3cd5cf9cb58.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/42/823ac073-2d2b-48c4-b90c-f3cd5cf9cb58.jpg">
+                            </div>
+                                    <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/113/f736fd67-3aa9-4dba-9510-e61f0f6f0c51.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/113/f736fd67-3aa9-4dba-9510-e61f0f6f0c51.jpg">
+                            </div>
+                                    <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/137/d8a33f95-bcd2-4fc0-868c-8e7f4dfd84c2.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/137/d8a33f95-bcd2-4fc0-868c-8e7f4dfd84c2.jpg">
+                            </div>
+                                    <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/90/5b5956ee-9e67-4978-892e-da58b1488064.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/90/5b5956ee-9e67-4978-892e-da58b1488064.jpg">
+                            </div>
+                                    <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/68/bd4eae7e-85ed-4466-b5ac-6964ad4de5d2.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/68/bd4eae7e-85ed-4466-b5ac-6964ad4de5d2.jpg">
+                            </div>
+                                    <div class="img-6xx-bg bg-height">
+                                <img src="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/183/133f4b4c-fa9f-42be-ab03-60e3e701002c.jpg" class="J-mer-bigImg" data-original="//a.vpimg4.com/upload/merchandise/pdcvis/603410/2020/0117/183/133f4b4c-fa9f-42be-ab03-60e3e701002c.jpg">
+                            </div>
+                                </div>
+                        <div class="dc-img-con">
+                                </div>
+                        <div class="dc-txt-con">
+                                </div>
+                    </div>
+                </div>
+            </div>
+            
+        </div>
     </div>
     <!-- 页脚 -->
     @@include("./component/footer.html")
