--- a/src/html/index.html
+++ b/src/html/index.html
@@ -398,7 +398,10 @@
                     </div> -->
                 </div>
             </div>
-
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多精选品牌</a>
+            </div>
+            <!-- 女装 -->
             <div class="women-shop shop-top-banner clearfix">
                 <div class="shop-sort">
                     <div class="shop-sort-title">
@@ -410,17 +413,23 @@
 
                 </div>
             </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多女装品牌</a>
+            </div>
             <!-- 鞋包 -->
             <div class="shoe-bag-shop shop-top-banner clearfix">
                 <div class="shop-sort">
                     <div class="shop-sort-title">
-                        <img src="https://a.vpimg3.com/upload/dop/2016/03/17/121/woman_2ad.png" alt="">
+                        <img src="https://a.vpimg4.com/upload/dop/2016/03/17/72/shoe.png" alt="">
                     </div>
                 </div>
                 <!-- 商品展示的盒子 -->
                 <div class="shop-show-box clearfix">
 
                 </div>
+            </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多鞋包品牌</a>
             </div>
             <!-- 男装 -->
             <div class="man-wear-shop shop-top-banner clearfix">
@@ -434,6 +443,9 @@
 
                 </div>
             </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多男装品牌</a>
+            </div>
             <!-- 运动 -->
             <div class="sport-shop shop-top-banner clearfix">
                 <div class="shop-sort">
@@ -445,6 +457,9 @@
                 <div class="shop-show-box clearfix">
 
                 </div>
+            </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多运动品牌</a>
             </div>
             <!-- 饰品 -->
             <div class="decorate-shop shop-top-banner clearfix">
@@ -458,6 +473,9 @@
 
                 </div>
             </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多饰品品牌</a>
+            </div>
             <!-- 美妆 -->
             <div class="b-makeup-shop shop-top-banner clearfix">
                 <div class="shop-sort">
@@ -469,6 +487,9 @@
                 <div class="shop-show-box clearfix">
 
                 </div>
+            </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多美妆品牌</a>
             </div>
             <!-- 母婴产品 -->
             <div class="m-i-shop shop-top-banner clearfix">
@@ -482,6 +503,9 @@
 
                 </div>
             </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多母婴品牌</a>
+            </div>
             <!-- 居家 -->
             <div class="home-shop shop-top-banner clearfix">
                 <div class="shop-sort">
@@ -494,6 +518,9 @@
 
                 </div>
             </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多居家品牌</a>
+            </div>
             <!-- 国际 -->
             <div class="int-shop shop-top-banner clearfix">
                 <div class="shop-sort">
@@ -505,6 +532,9 @@
                 <div class="shop-show-box clearfix">
 
                 </div>
+            </div>
+            <div class="shop-sort-ft">
+                <a class="show_more_btn" href="javascript:void(0)">逛更多国际品牌</a>
             </div>
             <!-- 生活 -->
             <div class="life-shop shop-top-banner clearfix">
@@ -532,7 +562,9 @@
                 <!-- 商品展示的盒子 -->
                 <div class="shop-show-box shop-top-banner last-show clearfix">
                     <div class="brand-item">
-                        <a  href=""><img class="brand-img" src="https://d.vpimg1.com/upcb/2020/04/10/47/ias_158651293272055_320x153_90.jpg" alt=""></a>
+                        <a href=""><img class="brand-img"
+                                src="https://d.vpimg1.com/upcb/2020/04/10/47/ias_158651293272055_320x153_90.jpg"
+                                alt=""></a>
                         <div class="brand-info">
                             <a class="brand-name" href="javscript:void(0)">艾夫斯ITISF4女装-最后疯抢专场</a>
                             <div class="pms-info" title="全场折上3.5折起">
@@ -555,11 +587,13 @@
 
     <!-- 查看更多预告 -->
     <div class="index-bg-bttom layout clearfix">
-        <a href="javascript:void(0)" target="_blank" role="button" class="ui-btn-large ui-btn-primary more-brand-btn">查看更多预告档期</a>
+        <a href="javascript:void(0)" target="_blank" role="button"
+            class="ui-btn-large ui-btn-primary more-brand-btn">查看更多预告档期</a>
     </div>
 
     @@include("./component/footer.html")
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="https://cdn.bootcss.com/Swiper/4.5.1/js/swiper.min.js"></script>
     <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
     <script src="./js/index.js"></script>
