--- a/src/html/login.html
+++ b/src/html/login.html
@@ -87,7 +87,7 @@
                     </div>
                   </div>
                   <div class="form-submit">
-                    <button id="submit-btn" class="submit-btn">登录</button>
+                    <button id="submit-btn" type="button" class="submit-btn">登录</button>
                   </div>
                 </div>
               </form>
@@ -128,6 +128,7 @@
     <p class="copyright">Copyright 2008-2020 vip.com，All Rights Reserved ICP证：粤 B2-20080329</p>
   </footer>
   <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+  <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
   <script src="./js/libs/validate/jquery.validate.min.js"></script>
   <script src="./js/libs/validate/additional-methods.js"></script>
   <script src="./js/libs/validate/messages_zh.js"></script>
