增加列表页面分页功能

--- a/src/html/detailInfo.html
+++ b/src/html/detailInfo.html
@@ -357,6 +357,7 @@
         </div>
         <!-- 详情数据 -->
         <div class="fw-detail clearfix">
+            
             <div class="placeholder layout clearfix">
                 <div class="detailTop clearfix">
                     <div class="detailTop-wrap">
@@ -408,6 +409,7 @@
     <!-- 页脚 -->
     @@include("./component/footer.html")
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
     <script src="./js/libs/magnifier/magnifier.js"></script>
     <script src="./js/header.js"></script>
