--- a/src/html/activity.html
+++ b/src/html/activity.html
@@ -89,6 +89,7 @@
     @@include("./component/footer.html")
 
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
     <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/activity.js"></script>
