--- a/src/html/shop_list.html
+++ b/src/html/shop_list.html
@@ -13,6 +13,7 @@
     <link rel="stylesheet" href="./css/base.css">
     <link rel="stylesheet" href="./css/shop_list.css">
     <link rel="stylesheet" href="./css/ui-commons.css">
+    <link rel="stylesheet" href="./css/pagination.css">
 </head>
 
 <body>
@@ -173,7 +174,7 @@
             <!-- 商品列表区域 -->
             <div class="goods-list">
                 <div class="wrap_pro">
-<!--                     <div class="good-item">
+                    <!--                     <div class="good-item">
                         <a href="javascript:;" target="_blank">
                             <div class="good-item-top">
                                 <div class="good-item-img-box">
@@ -207,10 +208,16 @@
                 </div>
             </div>
         </div>
+        <div class="layout" style="text-align: center; margin:20px auto;">
+            <div class=" m-style pager"></div>
+        </div>
+
     </div>
     <!-- 页脚 -->
     @@include("./component/footer.html")
     <script src="https://cdn.bootcss.com/jquery/3.4.1/jquery.min.js"></script>
+    <script src="https://cdn.bootcss.com/jquery-cookie/1.4.1/jquery.cookie.min.js"></script>
+    <script src="./js/libs/pager/jquery.pagination.js"></script>
     <script src="./js/libs/lazyload/jquery.lazyload.min.js"></script>
     <script src="./js/header.js"></script>
     <script src="./js/shop_list.js"></script>
